--- a/style.css
+++ b/style.css
@@ -243,12 +243,13 @@ input:focus {
     background-color: rgb(124, 124, 124);
     color: white;
     border: none;
-    border-radius: 10px;
+    border-radius: 30px;
     font-weight: bold;
     cursor: pointer;
     position: absolute;
     right: 10px;
     top: 10px;
+    padding: 5px 10px;
 }
 .delete_btn:hover {
     background-color: red;
